--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.19.0",
+    "@socket.io/admin-ui": "^0.5.1",
+    "@socket.io/redis-streams-adapter": "^0.2.2",
+    "@upstash/kafka": "^1.3.5",
     "bcrypt": "^5.1.1",
     "bullmq": "^5.12.12",
     "cors": "^2.8.5",
@@ -20,11 +23,14 @@
     "express": "^4.19.2",
     "formidable": "^3.5.1",
     "http-status": "^1.7.4",
+    "ioredis": "^5.4.1",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "kafkajs": "^2.2.4",
     "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
     "prisma": "^5.19.0",
+    "socket.io": "^4.7.5",
     "uuid": "^10.0.0"
   }
 }
